# ChangeLog for net-analyzer/nagios-core
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-core/ChangeLog,v 1.88 2006/06/02 13:14:30 eldad Exp $

  02 Jun 2006; Eldad Zack <eldad@gentoo.org> -nagios-core-1.4.ebuild,
  -nagios-core-2.3.ebuild:
  Purged security affected version wrt bug #133487.

*nagios-core-2.4 (01 Jun 2006)

  01 Jun 2006; Lance Albertson <ramereth@gentoo.org>
  +nagios-core-2.4.ebuild:
  * Version bump

  16 May 2006; Markus Rothe <corsair@gentoo.org> nagios-core-1.4.1.ebuild:
  Stable on ppc64; bug #133487

  16 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  nagios-core-1.4.1.ebuild:
  Stable on sparc wrt security #133487

  16 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  nagios-core-1.4.1.ebuild:
  Stable on x86 wrt bug #133487.

*nagios-core-2.3.1 (16 May 2006)
*nagios-core-1.4.1 (16 May 2006)

  16 May 2006; Lance Albertson <ramereth@gentoo.org>
  +nagios-core-1.4.1.ebuild, +nagios-core-2.3.1.ebuild:
  * Version bump for yet another security issue (See bug #133487)

  12 May 2006; Eldad Zack <eldad@gentoo.org> nagios-core-1.4.ebuild,
  nagios-core-2.3.ebuild:
  Fixed enewuser behaviour, Closes Bug #133127. Thanks to Christian Gut
  <cycloon@is-root.org>.

  07 May 2006; Markus Rothe <corsair@gentoo.org> nagios-core-1.4.ebuild:
  Stable on ppc64

  06 May 2006; Eldad Zack <eldad@gentoo.org>
  +files/nagios-1.x-Makefile-asneeded.diff, nagios-core-1.4.ebuild:
  fixed nagios to compile with --as-needed. Closes bug #130806. Thanks to
  Patrizio Bassi <hetfield666@gmail.com> for reporting.

  06 May 2006; Eldad Zack <eldad@gentoo.org> -nagios-core-1.2-r4.ebuild,
  -nagios-core-1.3.ebuild, -nagios-core-2.0.ebuild, -nagios-core-2.1.ebuild,
  -nagios-core-2.2.ebuild:
  removed versions wrt security #132159

  05 May 2006; Lance Albertson <ramereth@gentoo.org> nagios-core-1.4.ebuild:
  * Marked stable on x86 (bug #132159)
