@@ -29,34 +29,34 @@ AUX submit_check_result_via_nsca.patch 585 RMD160 1dc2b0a10b0c824b3e0026c26d17f9
 MD5 cee7d66cc61be3558af44ab177d99e1f files/submit_check_result_via_nsca.patch 585
 RMD160 1dc2b0a10b0c824b3e0026c26d17f931703e7a98 files/submit_check_result_via_nsca.patch 585
 SHA256 2770e3988ce05a63866e4b32c029f3ef13d64d7da3791747014378391d5d8d3e files/submit_check_result_via_nsca.patch 585
-DIST nagios-1.4.1.tar.gz 1643386
-DIST nagios-1.x-Makefile-distclean-gentoo.diff.bz2 1133
+DIST nagios-1.4.1.tar.gz 1643386 RMD160 f79f6ec943e820562263d62b5e0fb8ab090f8d69 SHA1 27a1e46479f526aaf218d4dc8f90b29e8a6d9ace SHA256 8383ba2d76dc94d677987b23bd0a6cf241d3cde6dd93920ee69a6841edc71898
+DIST nagios-1.x-Makefile-distclean-gentoo.diff.bz2 1133 RMD160 62a627f54b878bdad8347138935ec7875bf39857 SHA1 2063a2d629e88f2e6b536d4eafe4e0f815c4fdb1 SHA256 1f6a1d76d589c5a5ae5bb68367a410ea984f6dccf766a6a76229c1014f872084
 DIST nagios-2.0b.cfg-sample.gz 8990
 DIST nagios-2.3.1.tar.gz 1734958
 DIST nagios-2.4.tar.gz 1735573
-EBUILD nagios-core-1.4.1.ebuild 7508 RMD160 5a85ba0fb8f531097e4ecf4d7ec96127992d6d97 SHA1 41ef362f27389f95c797e5d8f60326362e7a88b7 SHA256 8e0e9edd1730c57243fef4c97545006e8867876a936e4d6d7adfc3713c8f829e
-MD5 b77809d363ccf9b561c099866e60ad3b nagios-core-1.4.1.ebuild 7508
-RMD160 5a85ba0fb8f531097e4ecf4d7ec96127992d6d97 nagios-core-1.4.1.ebuild 7508
-SHA256 8e0e9edd1730c57243fef4c97545006e8867876a936e4d6d7adfc3713c8f829e nagios-core-1.4.1.ebuild 7508
-EBUILD nagios-core-2.3.1.ebuild 5995 RMD160 829b6f0dc55942da679593d299466d716bf2dcd2 SHA1 8db672da9b63399e990258fc00a7422d09da40f0 SHA256 28d24cc625ecdfa09a1decc6b9f93f9f074f674e4f03603a4c6a2ef1ee181151
-MD5 0db78682d06f57a5c4af37bad8cea745 nagios-core-2.3.1.ebuild 5995
-RMD160 829b6f0dc55942da679593d299466d716bf2dcd2 nagios-core-2.3.1.ebuild 5995
-SHA256 28d24cc625ecdfa09a1decc6b9f93f9f074f674e4f03603a4c6a2ef1ee181151 nagios-core-2.3.1.ebuild 5995
-EBUILD nagios-core-2.4.ebuild 5993 RMD160 5e39e99efc7f8090ca5e84c06ab4f29787479660 SHA1 58aa86ce57d67306cf1f48d2e9fd8347d8447f4f SHA256 55e1ab0ef7d49a813ef8c3239540387e7169b60f13d80619cfb5a83c33364f2b
-MD5 3632b2e5d0ab6ff9f5ba1e8bcdec7c87 nagios-core-2.4.ebuild 5993
-RMD160 5e39e99efc7f8090ca5e84c06ab4f29787479660 nagios-core-2.4.ebuild 5993
-SHA256 55e1ab0ef7d49a813ef8c3239540387e7169b60f13d80619cfb5a83c33364f2b nagios-core-2.4.ebuild 5993
-MISC ChangeLog 15624 RMD160 9ecc5742526cabad25cf386b35464f0c5f07c807 SHA1 a4d71953cfa93f11353fd0ccd63517fada0823e2 SHA256 175f09e8a82c2b94d00f1f26d5dc30e0d39c7a6ad3cbeef9cbbdeab151c9a59d
-MD5 67debad5e5ea38299ccb9b74b499d180 ChangeLog 15624
-RMD160 9ecc5742526cabad25cf386b35464f0c5f07c807 ChangeLog 15624
-SHA256 175f09e8a82c2b94d00f1f26d5dc30e0d39c7a6ad3cbeef9cbbdeab151c9a59d ChangeLog 15624
+EBUILD nagios-core-1.4.1.ebuild 7488 RMD160 f1862f1d909e6b2fbe09790983f687887763774e SHA1 469cde8a2c27c11b5fd539d9b5803b1f8300f031 SHA256 058ffb1efde3a4665208f67cf7dde1fd8d2967887c324422a4b8d136d451b3fe
+MD5 886e406820dcb508f9766c6fa2478f38 nagios-core-1.4.1.ebuild 7488
+RMD160 f1862f1d909e6b2fbe09790983f687887763774e nagios-core-1.4.1.ebuild 7488
+SHA256 058ffb1efde3a4665208f67cf7dde1fd8d2967887c324422a4b8d136d451b3fe nagios-core-1.4.1.ebuild 7488
+EBUILD nagios-core-2.3.1.ebuild 5974 RMD160 94c8e55281bd9ee8dd89ad80be1610b862266c49 SHA1 a35fbbf24e23b8bfe92c4134b4f267616e5540d0 SHA256 8078e9d4115a9e6f1c30adab52a66f6224dac99c32149a6fd98b81d69ba3a27c
+MD5 b8c1230459250088d42b945af4ae90ab nagios-core-2.3.1.ebuild 5974
+RMD160 94c8e55281bd9ee8dd89ad80be1610b862266c49 nagios-core-2.3.1.ebuild 5974
+SHA256 8078e9d4115a9e6f1c30adab52a66f6224dac99c32149a6fd98b81d69ba3a27c nagios-core-2.3.1.ebuild 5974
+EBUILD nagios-core-2.4.ebuild 5972 RMD160 202ff3a724ee625ffc6eae465a4488978e6fdb6b SHA1 8561ff400d55ed3ac65bfde52576cff98bcf2b11 SHA256 524a5d0cb0031bb5f809c5d9e03691b3f64a6a4d232fc18c8eafb296f610b44a
+MD5 04f71325c36e02448937ca7e94d351a3 nagios-core-2.4.ebuild 5972
+RMD160 202ff3a724ee625ffc6eae465a4488978e6fdb6b nagios-core-2.4.ebuild 5972
+SHA256 524a5d0cb0031bb5f809c5d9e03691b3f64a6a4d232fc18c8eafb296f610b44a nagios-core-2.4.ebuild 5972
+MISC ChangeLog 15801 RMD160 715ed000f4942c9770d439140e38141b27252937 SHA1 f8c99105f081a16cf2ea6378737a0aa340689396 SHA256 fc2c8380fecf8d4b0340ed1f19ae76e4d59a232de4ac85c4bae1731acf5819e0
+MD5 1a3dec233060b98a24a81eae41d88ffe ChangeLog 15801
+RMD160 715ed000f4942c9770d439140e38141b27252937 ChangeLog 15801
+SHA256 fc2c8380fecf8d4b0340ed1f19ae76e4d59a232de4ac85c4bae1731acf5819e0 ChangeLog 15801
 MISC metadata.xml 1049 RMD160 33d4d61b3c0c0c29cd4770349d1b18ee280b8395 SHA1 19972fccad8732b7fd85e1b8c0f1077dc254432f SHA256 c2b2985cb9cd326a5eb6523769cdf7e63bde2a0523dc59df5989282d1fbbd2a0
 MD5 bb0bc884a0383e5be0a4bae6cba836dc metadata.xml 1049
 RMD160 33d4d61b3c0c0c29cd4770349d1b18ee280b8395 metadata.xml 1049
 SHA256 c2b2985cb9cd326a5eb6523769cdf7e63bde2a0523dc59df5989282d1fbbd2a0 metadata.xml 1049
-MD5 2e5fdbc8e1063290d5589c1091bde0bb files/digest-nagios-core-1.4.1 153
-RMD160 2a185fb26605c0f416e59dad7bfb41288e546878 files/digest-nagios-core-1.4.1 153
-SHA256 b7086b2946148b8665aef94fb392a359420a45ef4599a088a321ece4aae08899 files/digest-nagios-core-1.4.1 153
+MD5 2ff64ef7844e2d8435b395e2a77645c0 files/digest-nagios-core-1.4.1 551
+RMD160 b1f7ffc038e3d8705fe5bc94fa792480f890bd57 files/digest-nagios-core-1.4.1 551
+SHA256 7e25c77577e6d3484161cabb5e76212de02538d6011b570be3b1c18742d97f18 files/digest-nagios-core-1.4.1 551
 MD5 801bbf98c4aa4b4d10fc5de369933342 files/digest-nagios-core-2.3.1 133
 RMD160 064da001ae6ee1a3d08d2d1b577bb9bbcb6fc821 files/digest-nagios-core-2.3.1 133
 SHA256 7d0241c5d0da3ab2636bdba2b1ec6bd27b5f121e018f6389cabb966421dd199a files/digest-nagios-core-2.3.1 133
@@ -66,7 +66,7 @@ SHA256 07ee78e363245ad44a3621ac7f0cc679671994863ce1537ccbfa2777d28db33d files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2.2-ecc0.1.6 (GNU/Linux)
 
-iD8DBQFEgDm+T+MN7JbqCpMRAk+qAJ9OuXECPWBFq5kJzzh0vH0c/tueigCggGH3
-s1r4rnwd7AvVoaf9Ky8pFTc=
-=2BZa
+iD8DBQFEgEO+T+MN7JbqCpMRAjcsAJwNVdn3m+OVyFTuYBQPlDeM8PNZTACeIYWl
+rrT0LNXkDgaziJb9n0Pkpi4=
+=+4Im
 -----END PGP SIGNATURE-----
