@@ -1,2 +1,6 @@
 MD5 4e77a1200f8e4343e59234df76d2a444 nagios-1.4.1.tar.gz 1643386
+RMD160 f79f6ec943e820562263d62b5e0fb8ab090f8d69 nagios-1.4.1.tar.gz 1643386
+SHA256 8383ba2d76dc94d677987b23bd0a6cf241d3cde6dd93920ee69a6841edc71898 nagios-1.4.1.tar.gz 1643386
 MD5 565ce2a690d50aeb542e7afe44b8c733 nagios-1.x-Makefile-distclean-gentoo.diff.bz2 1133
+RMD160 62a627f54b878bdad8347138935ec7875bf39857 nagios-1.x-Makefile-distclean-gentoo.diff.bz2 1133
+SHA256 1f6a1d76d589c5a5ae5bb68367a410ea984f6dccf766a6a76229c1014f872084 nagios-1.x-Makefile-distclean-gentoo.diff.bz2 1133
