@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-core/Attic/nagios-core-1.4.1.ebuild,v 1.4 2006/05/16 19:48:34 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-core/Attic/nagios-core-1.4.1.ebuild,v 1.5 2006/06/02 13:56:51 eldad Exp $
 
 inherit eutils apache-module toolchain-funcs
 
@@ -203,9 +203,7 @@ src_install() {
 	keepdir /var/nagios/archives
 	keepdir /usr/nagios/share/ssi
 	keepdir /var/nagios/rw
-}
 
-pkg_preinst() {
 	if use noweb; then
 		chown nagios:nagios ${D}/var/nagios/rw || die "Failed Chown of ${D}/var/nagios/rw"
 	else
