@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nagios-core
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-core/ChangeLog,v 1.88 2006/06/02 13:14:30 eldad Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-core/ChangeLog,v 1.89 2006/06/02 13:56:51 eldad Exp $
+
+  02 Jun 2006; Eldad Zack <eldad@gentoo.org> nagios-core-1.4.1.ebuild,
+  nagios-core-2.3.1.ebuild, nagios-core-2.4.ebuild:
+  Fixed binary package install (again). bug #134023.
 
   02 Jun 2006; Eldad Zack <eldad@gentoo.org> -nagios-core-1.4.ebuild,
   -nagios-core-2.3.ebuild:
